--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -8,5 +8,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "test", "**/*.spec.ts", "**/*.test.ts"]
 }
